<resources>
    <string name="app_name" translatable="false">Vật lý thú vị</string>
    <string name="c1" translatable="false">Động học chất điểm</string>
    <string name="c2" translatable="false">Động lực học chất điểm</string>
    <string name="c3" translatable="false">Cân bằng và chuyển động của vật rắn</string>
    <string name="c4" translatable="false">Các định luật bảo toàn</string>
    <string name="c5" translatable="false">Chất khí</string>
    <string name="c6" translatable="false">Cơ sở của nhiệt động lực học</string>
    <string name="c7" translatable="false">Chất rắn và chất lỏng. Sự chuyển thể</string>
    <string name="c1_b1" translatable="false">Chuyển động cơ</string>
    <string name="c1_b2" translatable="false">Chuyển động thẳng đều</string>
    <string name="c1_b3" translatable="false">Chuyển động thẳng biến đổi đều</string>
    <string name="c1_b4" translatable="false">Sự rơi tự do</string>
    <string name="c1_b5" translatable="false">Chuyển động tròn đều</string>
    <string name="c4_b1" translatable="false">Động lượng. Định luật bảo toàn động lượng</string>
    <string name="c6_b1" translatable="false">Nội năng và sự biến thiên nội năng</string>
    <string name="c7_b1" translatable="false">Chất rắn kết tinh. Chất rắn vô định hình</string>
    <string name="c7_b2" translatable="false">Biến dạng cơ của vật rắn</string>
    <string name="c7_b3" translatable="false">Sự nở vì nhiệt của vật rắn</string>
    <string name="c7_b4" translatable="false">Các hiện tượng bề mặt của chất lỏng</string>
    <string name="c7_b5" translatable="false">Sự chuyển thể của các chất</string>
    <string name="c7_b6" translatable="false">Độ ẩm của không khí</string>
    <string name="c4_b1_p1">I. Động lượng.$\\newline$
1. Xung lượng của lực.$\\newline$
a) Ví dụ.$\\newline$
</string>
    <string name="c4_b1_p2">•	Cầu thủ đá mạnh vào quả bóng, quả bóng đang đứng yên sẽ bay đi. $\\newline$
•	Hai hòn bi va chạm vào nhau, đổi hướng $\\newline$
•	Như vậy : Lực có độ lớn đáng kể tác dụng lên một vật trong khoảng thời gian ngắn, có thể gây ra biến đổi đáng kể trạng thái chuyển động của vật. $\\newline$
b) Xung lượng của lực. $\\newline$
•	Khi một lực $\\mathop F\\limits^ \\to  $ tác dụng lên một vật trong khoảng thời gian $\\Delta t$ thì tích $\\mathop F\\limits^ \\to  $.$\\Delta t$ được định nghĩa là xung lượng của lực $\\mathop F\\limits^ \\to  $ trong khoảng thời gian Dt ấy. $\\newline$
•	Ở định nghĩa này, ta giả thiết lực $\\Delta t$ không đổi trong thời gian ấy. $\\newline$
•	Đơn vị của xung lượng của lực là N.s$$\\newline$$
2. Động lượng. $\\newline$
a) Tác dụng của xung lượng của lực. $\\newline$
•	Giả sử lực $\\mathop F\\limits^ \\to  $ tác dụng vào vật có khối lượng m làm vật tốc vật biến thiên từ $\\overrightarrow {{V_1}} $ đến $\\overrightarrow {{V_2}} $ theo định luật II Niu Tơn $\\newline$
•	Ta có:   $\\mathop a\\limits^ \\to   = \\frac{{\\mathop {{v_2}}\\limits^ \\to   - \\mathop {{v_1}}\\limits^ \\to  }}{{\\Delta t}}$ $\\newline$
•	Theo định luật II Newton : $\\newline$
$m\\mathop a\\limits^ \\to   = \\mathop F\\limits^ \\to  $  hay $m\\frac{{\\mathop {{v_2}}\\limits^ \\to   - \\mathop {{v_1}}\\limits^ \\to  }}{{\\Delta t}} = \\mathop F\\limits^ \\to  $ $\\newline$
•	   $ \\to m\\mathop {{v_2}}\\limits^ \\to   - m\\mathop {{v_1}}\\limits^ \\to   = \\Delta t.\\mathop F\\limits^ \\to  $ $\\newline$
•	Vậy xung lực của lực bằng độ biến thiên của tích $\\mathop P\\limits^ \\to   = m.\\mathop V\\limits^ \\to  $ $\\newline$
b) Động lượng. $\\newline$
•	Động lượng $\\mathop P\\limits^ \\to  $ của một vật là một véc tơ cùng hướng với vận tốc $\\mathop v\\limits^ \\to  $ và được xác định bởi công thức $\\mathop P\\limits^ \\to   = m.\\vec v$ $\\newline$
•	Động lượng là đại lượng véctơ cùng phương và cùng chiều véctơ vận tốc. $\\newline$
•	Đơn vị động lượng:  kg.m/s$\\newline$
c) Mối liên hệ giữa động lượng và xung lượng của lực. $\\newline$
•	Ta có : $$\\mathop {{P_2}}\\limits^ \\to   - \\mathop {{P_1}}\\limits^ \\to   = \\mathop F\\limits^ \\to  .\\Delta t$$
 $$ \\to \\Delta \\mathop P\\limits^ \\to   = \\mathop F\\limits^ \\to  .\\Delta t$$
•	Độ biến thiên động lượng của một vật trong khoảng thời gian nào đó bằng xung lượng của tổng các lực tác dụng lên vật trong khoảng thời gian đó. $\\newline$
•	Phát biểu này được xem như là một cách diễn đạt của định luật II Newton. $\\newline$
•	Ý nghĩa : Lực tác dụng đủ mạnh trong một khoảng thời gian thì có thể gây ra biến thiên động lượng của vật$$\\newline$$
II. Định luật bảo toàn động lượng. $\\newline$
1. Hệ cô lập (hệ kín). $\\newline$
•	Một hệ nhiều vật được gọi là cô lập khi không có ngoại lực tác dụng lên hệ hoặc các ngoại  lực cân bằng nhau. $\\newline$
•	Trong một hệ cô lập chỉ có nội lực tương tác giữa các vật. $\\newline$
•	Ví dụ: Xét hai bi tương tác không ma sát trên mặt phẳng ngang. Trường hợp này hệ được xem là hệ cô lập$\\newline$
</string>
    <string name="c4_b1_p3">2. Định luật bảo toàn động lượng của hệ cô lập. $\\newline$
•	Xét một hệ cô lập gồm hai vật theo định luật III Niutơn
$$\\mathop {{F_1}}\\limits^ \\to   =  - \\mathop {{F_2}}\\limits^ \\to  $$
•	Độ biến thiên động lượng: $\\newline$
$$\\Delta \\overrightarrow {{p_1}}  = {\\overrightarrow F _1}\\Delta t$$
$$\\Delta \\mathop {{\\rm{ }}{p_2}}\\limits_{}^ \\to   = \\mathop {{F_2}}\\limits^ \\to  \\Delta t$$
•	Từ định luật III Niutơn: $\\Delta \\mathop {\\overrightarrow {{p_1}} }\\limits_{}^{}  =  - \\Delta \\mathop {\\overrightarrow {{p_2}} }\\limits_{}^{} $
$$ \\Rightarrow \\Delta \\mathop {{p_1}}\\limits^ \\to   + \\Delta \\mathop {{p_2}}\\limits^ \\to   = 0$$
$$ \\Rightarrow \\Delta \\mathop {{\\rm{ }}p}\\limits^ \\to   = \\Delta \\mathop {{p_1}}\\limits^ \\to   + \\Delta \\mathop {{p_2}}\\limits^ \\to   = 0$$
•	Độ biến thiên động của hệ bằng không, nghĩa là động lượng của hệ không đổi
$\\mathop {{p_1}}\\limits^ \\to   + \\mathop {{p_2}}\\limits^ \\to  $ không đổi$\\newline$
•	Động lượng của một hệ cô lập là đại lượng được bảo toàn. $$\\newline$$
3. Va chạm mềm. $\\newline$
•	Xét một vật khối lượng ${m_1}$, chuyển động trên một mặt phẳng ngang với vân tốc $\\overrightarrow {{V_1}} $ đến va chạm vào một vật có khối lượng ${m_2}$ đang đứng yên. Sau va chạm hai vật nhấp làm một và cùng chuyển động với vận tốc $\\overrightarrow V $ $\\newline$
•	Theo định luật bảo toàn động lượng ta có : $\\newline$
${m_1}\\overrightarrow {{v_1}}  = ({m_1} + {m_2})\\overrightarrow v $ $\\newline$
•	Suy ra   $\\mathop v\\limits^ \\to   = \\frac{{{m_1}{{\\mathop v\\limits^ \\to  }_1}}}{{{m_1} + {m_2}}}$ $\\newline$
•	Va chạm của hai vật như vậy gọi là va chạm mềm. $$\\newline$$
4. Chuyển động bằng phản lực. $\\newline$
</string>
    <string name="c4_b1_p4">•	Một quả tên lửa có khối lượng M chứa một khối khí khối lượng m. Khi phóng tên lửa khối khí m phụt ra phía sau với vận tốc $\\mathop v\\limits^ \\to  $ thì tên khối lượng M chuyển động với vận tốc $\\mathop V\\limits^ \\to  $ $\\newline$
•	Theo định luật bảo toàn động lượng ta có : $\\newline$
$$m\\mathop v\\limits^ \\to   + M\\mathop V\\limits^ \\to   = 0$  → $\\mathop V\\limits^ \\to   =  - \\frac{m}{M}\\mathop v\\limits^ \\to  $$

</string>
    <string name="c6_b1_p1">I. Nội năng. $\\newline$
1. Nội năng là gì ? $\\newline$
•	Nội năng của vật là tổng động năng và thế năng của các phân tử cấu tạo nên vật.
•	Nội năng của một vật phụ thuộc vào nhiệt độ và thể tích của vật : $U{\\rm{ }} = {\\rm{ }}f\\left( {T,{\\rm{ }}V} \\right)$ $\\newline$
2. Độ biến thiên nội năng. $\\newline$
•	Trong nhiệt động lực học người ta không quan tâm đến nội năng của vật mà quan tâm đến độ biến thiên nội năng $\\Delta U$ của vật, nghĩa là phần nội năng tăng thêm hay giảm bớt đi trong một quá trình. $\\newline$
II. Các cách làm thay đổi nội năng. $\\newline$
1. Thực hiện công. $\\newline$
</string>
    <string name="c6_b1_p2">•	Khi thực hiện công lên hệ hoặc cho hệ thức hiện công thì có thể làm thay đổi nội năng của hệ. $\\newline$
•	Trong quá trình thực hiện công thì có sự biến đổi qua lại giữa nội năng và dạng năng lượng khác. $\\newline$
2. Truyền nhiệt. $\\newline$
a. Quá trình truyền nhiệt. $\\newline$
</string>
    <string name="c7_b3_p1">I. Sự nở dài. $\\newline$
1. Thí nghiệm. $\\newline$
•	Một vật rắn bằng kim loại đồng chất, một cầu được gắn chặt cố định, một đầu được nối với một bộ phận lẫy có thể mở rộng góc đo khi thanh rắn giãn nở vì nhiệt. $\\newline$
•	Nung nóng thanh kim loại kim loại ta thấy góc đo mở rộng sau một khoảng thời gian điều này chứng tỏ vật rắn đã bị biến dạng khi nhiệt độ thay đổi. $$\\newline$$
2. Kết luận. $\\newline$
•	Sự tăng độ dài của vật rắn khi nhiệt độ tăng gọi là sự nở dài vì nhiệt. $\\newline$
•	Biểu thức xác định độ nở dài của vật rắn: $\\newline$
$$\Delta l=l-l_0=\alpha l_0.\Delta t$$
•	Trong đó: $\\newline$
o	$l_0$: chiều dài ban đầu của vật rắn$\\newline$
o	$l$ : chiều dài sau khi giãn nở vì nhiệt của vật rắn$\\newline$
o	$\alpha$ : hệ số nở dài phụ thuộc vào bản chất của vật rắn, đơn vị là $\frac{1}{k}$ hay ${k^{ - 1}}$$\\newline$
o	$\Delta t=t_2-t_1$ : độ tăng nhiệt độ của vật rắn$\\newline$
o	$\Delta l$ : độ nở dài của vật rắn$\\newline$
•	Hệ số nở dài của một số vật liệu:
</string>
    <string name="c7_b3_p2">II. Sự nở khối. $\\newline$
1. Thí nghiệm. $\\newline$
•	Một vật rắn có dạng hình cầu đồng chất và một vật rắn đồng chất khác hình vành khuyên tròn. $\\newline$
•	Ở nhiệt độ ban đầu (nhiệt độ phòng) ta có thể đưa quả cầu qua hình vành khuyên dễ dàng do đường kính ngoài của quả cầu kim loại nhỏ hơn đường kính trong của vật rắn hình vành khuyên. $\\newline$
•	Tiến hành nung nóng quả cầu kim loại bằng đèn ga, sau khi nung nóng quả cầu kim loại không thể đi qua được vật rắn hình vành khuyên, điều này chứng tỏ thể tích của của cầu đã tăng lên do nhiệt độ hay nói cách khác vật rắn đã bị biến dạng vì nhiệt. $$\\newline$$
2. Kết luận. $\\newline$
•	Sự tăng thể tích của vật rắn khi nhiệt độ tăng gọi là sự nở khối. $\\newline$
•	Biểu thức độ nở khối của vật rắn: $\\newline$
$$\Delta V=V-V_0=\beta .V_0.\Delta t=3\alpha .\Delta t$$
•	Trong đó: $\\newline$
o	$V_0$: thể tích ban đầu của vật rắn$\\newline$
o	V: thể tích sau khi giãn nở vì nhiệt của vật rắn$\\newline$
o	$\beta =3\alpha$:  hệ số nở khối phụ thuộc vào bản chất của vật rắn và cũng có đơn vị là ${k^{ - 1}}$ $\\newline$
o	$\Delta t=t_2-t_1$: độ tăng nhiệt độ của vật rắn$\\newline$
o	$\Delta V$: độ nở khối của vật rắn$$\\newline$$
III. Ứng dụng biến dạng nhiệt của vật rắn$\\newline$
•	Trong thực tế các vật rắn bị biến dạng nhiệt khi nhiệt độ môi trường thay đổi và tất cả đều nở khối (giãn nở về thể tích) tuy nhiên tùy vào hình dạng của vật rắn sẽ ưu tiên nở khối hay nở dài, ví dụ các vật rắn có dạng thanh dài sẽ ưu tiên nở dài nhiều hơn. $\\newline$
•	Sự giãn nở vì nhiệt của vật rắn là điều không thể tránh khỏi vì thời tiết trên Trái Đất được phân chia thành hai mùa rõ rệt mùa đông (nhiệt độ giảm) và mùa hè (nhiệt độ tăng cao). $\\newline$
•	Trong xây dựng người ta luôn phải tính đến trường hợp giãn nở vì nhiệt, nếu không các công trình xây dựng có thể bị cong, vênh, nứt, phá hủy do sự giãn nở không đồng đều của các vật rắn khác nhau.
</string>
    <string name="c7_b3_p3">•	Trong ngành giao thông vận tải đường sắt, khi làm đường ray cho tàu chạy trong thời gian đầu các kỹ sư xây dựng đã bỏ qua tính chất vật lý biến dạng nhiệt của vật rắn, khiến cho các đoạn đường ray bị cong vênh làm mất an toàn và dẫn đến tai nạn tàu trệch bánh.</string>
    <string name="c7_b3_p5">•	Không chỉ có các kim loại, vật liệu bê tông cốt thép cũng bị giãn nở vì nhiệt nên trên các nhịp cầu đường bộ người ta cũng phải tạo ra các khe hở trên cầu để cho cầu giãn nở vì nhiệt khi thời tiết thay đổi tránh bị cong, vênh và gãy.
</string>
    <string name="c7_b4_p4">2. Ứng dụng. $\\newline$
•	Hiện tượng mặt vật rắn bị dính ướt chất lỏng được ứng dụng để làm giàu quặng theo phương pháp “tuyển nổi”. $$\\newline$$
III. Hiện tượng mao dẫn. $\\newline$
1. Thí nghiệm. $\\newline$
•	Nhúng các ống thuỷ tinh có đường kính trong nhỏ vào trong chất lỏng ta thấy :
</string>
</resources>