<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragments.lt">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/c1"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c2"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c3"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c4"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c5"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c6"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/c7"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>
</LinearLayout>