<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:title="@string/c7_b3"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c7_b3_p1"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c7_b3_h1"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c7_b3_p2"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c7_b3_h2"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c7_b3_p3"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <com.cunoraz.gifview.library.GifView
                android:id="@+id/gif2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:gif="@drawable/c7_b3_h3"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c7_b4_p4"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c7_b3_h4"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c7_b3_p5"
                app:setTextColor="@color/black"
                app:setClickable="true"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>