<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:title="@string/c4_b1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c4_b1_p1"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c4_b1_h1_1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c4_b1_h1_2"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c4_b1_p2"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c4_b1_h2"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c4_b1_p3"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/c4_b1_h3"/>

            <katex.hourglass.in.mathlib.MathView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                app:setText="@string/c4_b1_p4"
                app:setTextColor="@color/black"
                app:setClickable="true"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>